--- a/WX/s1/pyproject.toml
+++ b/WX/s1/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "dotenv>=0.9.9",
     "gradio[mcp]>=5.33.1",
+    "python-dotenv>=1.1.0",
     "rich>=14.0.0",
     "smolagents[toolkit]>=1.17.0",
 ]
