--- a/WX/tezt/samova/sa1/pyproject.toml
+++ b/WX/tezt/samova/sa1/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "dotenv>=0.9.9",
+    "httpx>=0.28.1",
     "openai>=1.86.0",
     "rich>=14.0.0",
 ]
