--- a/WX/tezt/gitml/gml1/pyproject.toml
+++ b/WX/tezt/gitml/gml1/pyproject.toml
@@ -7,6 +7,6 @@ requires-python = ">=3.13"
 dependencies = [
     "dotenv>=0.9.9",
     "gradio[mcp]>=5.33.2",
-    "openapi>=2.0.0",
+    "openai>=1.86.0",
     "rich>=14.0.0",
 ]
