--- a/WX/tezt/neby/n1/pyproject.toml
+++ b/WX/tezt/neby/n1/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.13"
 dependencies = [
     "dotenv>=0.9.9",
     "gradio>=5.34.0",
+    "openai>=1.86.0",
     "rich>=14.0.0",
 ]
