--- a/WX/tezt/neby/n1/pyproject.toml
+++ b/WX/tezt/neby/n1/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "dotenv>=0.9.9",
     "gradio>=5.34.0",
+    "huggingface-hub>=0.33.0",
     "openai>=1.86.0",
     "rich>=14.0.0",
 ]
