--- a/WX/agentz/sm3/pyproject.toml
+++ b/WX/agentz/sm3/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "dotenv>=0.9.9",
     "gradio[mcp]>=5.34.0",
+    "litellm>=1.72.6",
     "rich>=14.0.0",
     "smolagents[toolkit]>=1.18.0",
 ]
